# thulge-cygnet-rel

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
src/cygnet/: __init__.py  _format.py  config.py  models.py
src/cygnet/cli/: __init__.py  serve_http.py  serve_mcp.py
src/cygnet/core/: __init__.py  gate.py
src/cygnet/corrector/: __init__.py  _outcome_helpers.py  decorators.py  interface.py  llm.py  null.py  rampart_backed.py  refinement_loop.py  renderers.py  response_parser.py  retry_loop.py  runner.py  telemetry.py  template.py
src/cygnet/corrector/rampart_blocks/: system.md
src/cygnet/corrector/rampart_blocks/error_vocab/: constraint.md  cost.md  empty.md  parse.md  property.md  schema.md
src/cygnet/corrector/rampart_blocks/patterns/: 01_match_return.md  02_aggregation.md  03_relationship.md  04_optional_match.md  05_with_where.md
src/cygnet/cost/: __init__.py  explain_parser.py  gate.py
src/cygnet/dev/: __init__.py  docker-compose.yml  neo4j_lifecycle.py
src/cygnet/mirror/: __init__.py  builder.py  equivalence.py
src/cygnet/schema/: __init__.py  introspect.py  mirror_check.py  spec.py
src/cygnet/transports/: __init__.py  http_server.py  mcp_server.py
src/cygnet/validator/: __init__.py  ast_backend.py  builtin.py  chain.py  explain_backend.py  mirror_execute.py
